hotfix bugs