@@ -1,10 +1,7 @@
 package signal.mongo;
 
 import static com.mongodb.client.model.Filters.and;
-import static com.mongodb.client.model.Filters.elemMatch;
 import static com.mongodb.client.model.Filters.eq;
-import static com.mongodb.client.model.Filters.size;
-import static com.mongodb.client.model.Filters.type;
 import static com.mongodb.client.model.Updates.addToSet;
 import static com.mongodb.client.model.Updates.combine;
 import static com.mongodb.client.model.Updates.inc;
@@ -12,12 +9,13 @@ import static com.mongodb.client.model.Updates.pull;
 import static com.mongodb.client.model.Updates.set;
 import static java.lang.System.identityHashCode;
 import static java.lang.System.nanoTime;
+import static java.util.Collections.singletonList;
 import static java.util.concurrent.TimeUnit.NANOSECONDS;
+import static java.util.stream.Collectors.toUnmodifiableSet;
 import static signal.mongo.CollectionNamed.READ_WRITE_LOCK_NAMED;
 import static signal.mongo.MongoErrorCode.DUPLICATE_KEY;
 import static signal.mongo.MongoErrorCode.LOCK_FAILED;
 import static signal.mongo.MongoErrorCode.NO_SUCH_TRANSACTION;
-import static signal.mongo.MongoErrorCode.TRANSACTION_EXCEEDED_LIFETIME_LIMIT_SECONDS;
 import static signal.mongo.MongoErrorCode.WRITE_CONFLICT;
 import static signal.mongo.CommonTxnResponse.ok;
 import static signal.mongo.CommonTxnResponse.parkThread;
@@ -25,8 +23,9 @@ import static signal.mongo.CommonTxnResponse.retryableError;
 import static signal.mongo.CommonTxnResponse.thrownAnError;
 import static signal.mongo.Utils.getCurrentHostname;
 import static signal.mongo.Utils.getCurrentThreadName;
-import static signal.mongo.Utils.mappedHolder2AndFilter;
 import static signal.mongo.Utils.parkCurrentThreadUntil;
+import static signal.mongo.pojo.RWLockMode.READ;
+import static signal.mongo.pojo.RWLockMode.WRITE;
 
 import com.google.auto.service.AutoService;
 import com.google.common.annotations.VisibleForTesting;
@@ -44,22 +43,25 @@ import com.mongodb.client.MongoCollection;
 import com.mongodb.client.MongoDatabase;
 import com.mongodb.client.result.DeleteResult;
 import com.mongodb.client.result.InsertOneResult;
+
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
+import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.BiFunction;
-import org.bson.BsonType;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
 import org.bson.Document;
-import signal.api.DistributeLock;
+import org.bson.conversions.Bson;
 import signal.api.DistributeReadWriteLock;
-import signal.api.Holder;
 import signal.api.Lease;
 import signal.api.SignalException;
 import signal.mongo.pojo.RWLockDocument;
@@ -90,76 +92,50 @@ import signal.mongo.pojo.RWLockOwnerDocument;
 public final class DistributeReadWriteLockImp extends DistributeMongoSignalBase<RWLockDocument>
     implements DistributeReadWriteLock {
 
+  private final Logger log = Logger.getLogger("DistributeReadWriteLock");
+
+  private record LockOwnerObject(RWLockMode mode, Set<Integer> ownerHashCodes) {
+    @Override
+    public boolean equals(Object o) {
+      if (this == o) return true;
+      if (o == null || getClass() != o.getClass()) return false;
+      LockOwnerObject that = (LockOwnerObject) o;
+      return mode == that.mode && Objects.equals(ownerHashCodes, that.ownerHashCodes);
+    }
+
+    @Override
+    public int hashCode() {
+      return Objects.hash(mode, ownerHashCodes);
+    }
+  }
+
   // TODO 锁的可重入性
   private final DistributeReadLockImp readLockImp;
   // TODO 锁的可重入性
   private final DistributeWriteLockImp writeLockImp;
 
-  /**
-   * 当前锁的可用状态标识，state的值为NULL或者 "" 空字符串则代表当前锁的资源可用 若为"r" 或者 "w" 表示，不可用会导致执行{@link
-   * DistributeLock#lock()}操作的线程被挂起。
-   *
-   * <p>volatile会在内存中创建一个内存屏障，这个屏障可以保证修改的顺序性
-   *
-   * <ul>
-   *   <li>1: 空或者空字符串代表获取写锁的线程或者获取读锁的线程都可以尝试获取锁资源
-   *   <li>2: r代表当前锁处于读锁占领资源
-   *   <li>3: w代表当前锁处于写锁占领资源
-   * </ul>
-   *
-   * <p>state的值会被三个位置并发修改
-   *
-   * <ul>
-   *   <li>来自MongoDB ChangeStream的事件通知，此方法本身不会并发{@link
-   *       DistributeReadWriteLockImp#awakeSuccessor(ChangeStreamEvents.ReadWriteLockChangeAndRemovedEvent)}
-   *   <li>{@link DistributeWriteLockImp#lock()}
-   *   <li>{@link DistributeReadLockImp#lock()}
-   * </ul>
-   *
-   * <p>当前锁的state的值 == "r",
-   *
-   * <ul>
-   *   <li>A操作: Java线程1 执行了{@link DistributeReadLockImp#unlock()}操作
-   *   <li>B操作: Java线程2 执行了{@link DistributeWriteLockImp#lock()}操作
-   *   <li>C操作: Java线程3 执行了{@link
-   *       DistributeReadWriteLockImp#awakeSuccessor(ChangeStreamEvents.ReadWriteLockChangeAndRemovedEvent)}
-   * </ul>
-   *
-   * <p>A操作先执行释放锁资源，假设 B操作和C操作同时进入并发临界区，B操作和C操作都会更新 state 的值，只能有一个操作可以更新state的值成功， 因为存在{@link
-   * AtomicLong#compareAndSet(long, long)}的CAS机制，所以会出现以下两种场景
-   *
-   * <ul>
-   *   <li>C操作对应的线程更新state成功， C操作将state的值更新为 "" 空字符串，表示当前锁资源可用，B操作更新state失败，会在事务内部返回{@link
-   *       CommonTxnResponse#retryableError()}，C操作进行重试，读到当前锁资源可用，整个过程不存在脏读或者{@link
-   *       DistributeReadWriteLockImp#awakeSuccessor(ChangeStreamEvents.ReadWriteLockChangeAndRemovedEvent)}函数错过没有挂起的线程
-   *   <li>B操作对应的线程更新state成功，假设此时B操作读到了脏数据（A操作提交之前的数据版本）， B操作将state的值更新为 "r"，表示当前锁资源不可用，B操作挂起线程，
-   *       C操作唤醒挂起的线程，整个过程即使存在脏读的情况，但是依然会保证结果的正确性
-   * </ul>
-   */
+  /** 当前锁的可用状态标识 */
   @Keep
-  @GuardedBy("varHandle")
+  @GuardedBy("modeVarHandle")
   @VisibleForTesting
-  final StatefulVar<String> stateVars;
+  final StatefulVar<LockOwnerObject> state;
 
-  private final VarHandle varHandle;
+  private final VarHandle modeVarHandle;
 
   private final EventBus eventBus;
 
   private final ReentrantLock lock;
   private final Condition available;
 
-  private static final String READ_MODE = "r";
-  private static final String WRITE_MODE = "w";
-
   DistributeReadWriteLockImp(
       Lease lease, String key, MongoClient mongoClient, MongoDatabase db, EventBus eventBus) {
     super(lease, key, mongoClient, db, READ_WRITE_LOCK_NAMED);
 
-    this.stateVars = new StatefulVar<>("");
+    this.state = new StatefulVar<>(null);
     try {
-      varHandle =
+      modeVarHandle =
           MethodHandles.lookup()
-              .findVarHandle(DistributeReadWriteLockImp.class, "stateVars", StatefulVar.class);
+              .findVarHandle(DistributeReadWriteLockImp.class, "mode", StatefulVar.class);
     } catch (NoSuchFieldException | IllegalAccessException e) {
       throw new IllegalStateException(e);
     }
@@ -183,6 +159,17 @@ public final class DistributeReadWriteLockImp extends DistributeMongoSignalBase<
     return writeLockImp;
   }
 
+  private void safeUpdateModeIgnoreFailure(
+      StatefulVar<LockOwnerObject> captureState, LockOwnerObject newObj) {
+    Object oldObj =
+        modeVarHandle.compareAndExchangeRelease(
+            DistributeReadWriteLockImp.this, captureState, new StatefulVar<>(newObj));
+    log.log(
+        Level.INFO,
+        "safeUpdateModeIgnoreFailure success ? {0}",
+        new Object[] {identityHashCode(oldObj) == captureState.hashCode()});
+  }
+
   @Override
   protected void doClose() {
     eventBus.unregister(this);
@@ -192,10 +179,24 @@ public final class DistributeReadWriteLockImp extends DistributeMongoSignalBase<
     forceUnlock();
   }
 
-  private RWLockOwnerDocument buildCurrentOwner() {
+  private RWLockOwnerDocument buildCurrentOwner(int enterCount) {
     return new RWLockOwnerDocument(
-        getCurrentHostname(), lease.getLeaseID(), getCurrentThreadName());
+        getCurrentHostname(), lease.getLeaseID(), getCurrentThreadName(), enterCount);
   }
+
+  private record TryLockTxnResponse(
+      boolean tryLockSuccess,
+      boolean retryable,
+      StatefulVar<LockOwnerObject> captureState,
+      LockOwnerObject newObj) {}
+
+  private record UnlockTxnResponse(
+      boolean unlockSuccess,
+      boolean retryable,
+      String exceptionMessage,
+      boolean casUpdateState,
+      StatefulVar<LockOwnerObject> captureState,
+      LockOwnerObject newObj) {}
 
   @ThreadSafe
   @AutoService(DistributeWriteLock.class)
@@ -210,157 +211,212 @@ public final class DistributeReadWriteLockImp extends DistributeMongoSignalBase<
     @CheckReturnValue
     @Override
     public boolean tryLock(Long waitTime, TimeUnit timeUnit) throws InterruptedException {
-      RWLockOwnerDocument thisOwner = buildCurrentOwner();
+      RWLockOwnerDocument thisOwner = buildCurrentOwner(1);
 
-      BiFunction<ClientSession, MongoCollection<RWLockDocument>, CommonTxnResponse> command =
+      BiFunction<ClientSession, MongoCollection<RWLockDocument>, TryLockTxnResponse> command =
           (session, coll) -> {
+            @SuppressWarnings("unchecked")
+            StatefulVar<LockOwnerObject> state =
+                (StatefulVar<LockOwnerObject>)
+                    modeVarHandle.getAcquire(DistributeReadWriteLockImp.this);
 
-            // 执行之前先获取state的值，避免和wakeHead函数并发更新state的值冲突
-            RWLockDocument writeLock = coll.find(session, eq("_id", this.getKey())).first();
-            if (writeLock == null) {
-              writeLock =
-                  new RWLockDocument(
-                      key, RWLockMode.WRITE, Collections.singletonList(thisOwner), 1L);
-              InsertOneResult insertOneResult = coll.insertOne(session, writeLock);
-              return insertOneResult.getInsertedId() != null ? ok() : retryableError();
+            RWLockDocument lock = coll.find(session, eq("_id", this.getKey())).first();
+            if (lock == null) {
+              lock = new RWLockDocument(key, WRITE, singletonList(thisOwner), 1L);
+              InsertOneResult insertOneResult = coll.insertOne(session, lock);
+              boolean success = insertOneResult.getInsertedId() != null;
+              return new TryLockTxnResponse(
+                  success,
+                  !success,
+                  state,
+                  new LockOwnerObject(WRITE, Set.of(thisOwner.hashCode())));
             }
-            List<RWLockOwnerDocument> owners = writeLock.owners();
-            boolean inReadMode = RWLockMode.READ.equals(writeLock.mode());
-            boolean ownersEmpty = owners == null || owners.isEmpty();
-
-            if (inReadMode && !ownersEmpty) {
-              // 设置当前锁的状态处于r状态
-              if (identityHashCode(currState)
-                  == identityHashCode(
-                      varHandle.compareAndExchangeRelease(
-                          DistributeReadWriteLockImp.this, currState, new StatefulVar<>("r")))) {
-                return parkThread();
-              }
-              return retryableError();
+            if (!lock.owners().isEmpty() && !lock.owners().contains(thisOwner)) {
+              return new TryLockTxnResponse(
+                  false,
+                  false,
+                  state,
+                  new LockOwnerObject(
+                      lock.mode(),
+                      lock.owners().stream().map(Object::hashCode).collect(toUnmodifiableSet())));
             }
 
-            long revision = writeLock.getLong("v");
-            long newRevision = revision + 1;
-            var filter = and(eq("_id", this.getKey()), eq("v", revision));
-            var update =
-                inReadMode
-                    ? combine(set("m", WRITE_MODE), inc("v", 1L), addToSet("o", holder))
-                    : combine(inc("v", 1L), addToSet("o", holder));
-            // 如果为空代表无法匹配到对应的锁资源，需要继续重试
-            return ((writeLock = coll.findOneAndUpdate(session, filter, update, UPDATE_OPTIONS))
+            long version = lock.version(), newVersion = version + 1;
+
+            List<Bson> condList = new ArrayList<>(8);
+            condList.add(eq("_id", this.getKey()));
+            condList.add(eq("version", version));
+
+            List<Bson> updateList = new ArrayList<>(8);
+            updateList.add(inc("version", 1L));
+
+            if (lock.owners().contains(thisOwner)) {
+              condList.add(eq("owners.hostname", thisOwner.hostname()));
+              condList.add(eq("owners.lease", thisOwner.lease()));
+              condList.add(eq("owners.thread", thisOwner.thread()));
+              updateList.add(inc("owners.$.enter_count", 1));
+            } else if (lock.owners().isEmpty()) {
+              updateList.add(addToSet("owners", thisOwner));
+              updateList.add(set("mode", WRITE));
+            }
+            boolean success =
+                (lock =
+                            coll.findOneAndUpdate(
+                                session, and(condList), combine(updateList), UPDATE_OPTIONS))
                         != null
-                    && writeLock.getLong("v") == newRevision
-                    && extractHolder(writeLock, holder).isPresent())
-                ? ok()
-                : retryableError();
+                    && lock.version() == newVersion
+                    && lock.owners().contains(thisOwner);
+            return new TryLockTxnResponse(
+                success,
+                !success,
+                state,
+                success ? new LockOwnerObject(lock.mode(), Set.of(thisOwner.hashCode())) : null);
           };
 
       long s = nanoTime(), waitTimeNanos = timeUnit.toNanos(waitTime);
       boolean timed = waitTime > 0;
+
+      Next:
       for (; ; ) {
+        checkState();
+
         // 尝试着挂起当前线程
         boolean elapsed =
             parkCurrentThreadUntil(
                 lock,
                 available,
                 () -> {
-                  @SuppressWarnings("UnnecessaryParentheses")
-                  StatefulVar<String> sv =
-                      (StatefulVar<String>) varHandle.getAcquire(DistributeReadWriteLockImp.this);
-                  return !sv.value.isEmpty();
+                  @SuppressWarnings("unchecked")
+                  StatefulVar<LockOwnerObject> sv =
+                      (StatefulVar<LockOwnerObject>)
+                          modeVarHandle.getAcquire(DistributeReadWriteLockImp.this);
+                  if (sv.value == null || sv.value.ownerHashCodes().isEmpty()) return false;
+
+                  return sv.value.mode != WRITE
+                      || !sv.value.ownerHashCodes().contains(thisOwner.hashCode());
                 },
                 timed,
                 s,
                 (waitTimeNanos - (nanoTime() - s)));
 
-        if (!elapsed) throw new SignalException("Timeout.");
+        if (!elapsed) {
+          log.log(Level.WARNING, "Timeout.");
+          return false;
+        }
 
-        checkState();
-
-        CommonTxnResponse outbound =
+        TryLockTxnResponse rsp =
             commandExecutor.loopExecute(
                 command,
                 commandExecutor.defaultDBErrorHandlePolicy(
-                        NO_SUCH_TRANSACTION,
-                        WRITE_CONFLICT,
-                        LOCK_FAILED,
-                        TRANSACTION_EXCEEDED_LIFETIME_LIMIT_SECONDS,
-                        DUPLICATE_KEY),
+                    NO_SUCH_TRANSACTION, WRITE_CONFLICT, DUPLICATE_KEY),
                 null,
-                t -> !t.txnOk && t.retryable && !t.thrownError && !t.parkThread,
+                t -> t.retryable && !t.tryLockSuccess,
                 timed,
                 timed ? (waitTimeNanos - (nanoTime() - s)) : -1L,
                 NANOSECONDS);
 
-        // 写锁和读锁不同的是这里不会在唤醒successor线程，因为独占的特性
-        if (outbound.txnOk) {
-          return true;
-        }
-
-        if (outbound.thrownError) {
-          // 可能在事务提交阶段出现异常，所以需要判断lock的状态
-          if (lock.isLocked() && lock.isHeldByCurrentThread()) lock.unlock();
-          throw new SignalException(outbound.message);
-        }
-        if (outbound.parkThread) {
-          Thread.onSpinWait();
-        }
+        safeUpdateModeIgnoreFailure(rsp.captureState, rsp.newObj);
+        if (rsp.tryLockSuccess) return true;
+        Thread.onSpinWait();
       }
     }
 
     @Override
     public void unlock() {
-      checkState();
-      Document holder = currHolder();
-
-      BiFunction<ClientSession, MongoCollection<Document>, CommonTxnResponse> command =
+      RWLockOwnerDocument thisOwner = buildCurrentOwner(1);
+      BiFunction<ClientSession, MongoCollection<RWLockDocument>, UnlockTxnResponse> command =
           (session, coll) -> {
-            DeleteResult deleteResult =
-                coll.deleteOne(
+            @SuppressWarnings("unchecked")
+            StatefulVar<LockOwnerObject> state =
+                (StatefulVar<LockOwnerObject>)
+                    modeVarHandle.getAcquire(DistributeReadWriteLockImp.this);
+
+            RWLockDocument lock = coll.find(session, eq("_id", key)).first();
+            if (lock == null || lock.mode() == READ || !lock.owners().contains(thisOwner)) {
+              return new UnlockTxnResponse(
+                  false,
+                  false,
+                  "The current instance does not hold a write lock.",
+                  true,
+                  state,
+                  lock == null
+                      ? null
+                      : new LockOwnerObject(
+                          lock.mode(),
+                          lock.owners().stream()
+                              .map(RWLockOwnerDocument::hashCode)
+                              .collect(toUnmodifiableSet())));
+            }
+
+            long version = lock.version(), newVersion = version + 1;
+            Bson filter = and(eq("_id", key), eq("version", version));
+
+            RWLockOwnerDocument thatOwner = lock.owners().get(0);
+            if (thatOwner.enterCount() <= 1) {
+              DeleteResult deleteResult = coll.deleteOne(session, filter);
+              boolean success =
+                  deleteResult.wasAcknowledged() && deleteResult.getDeletedCount() == 1L;
+              return new UnlockTxnResponse(success, !success, null, success, state, null);
+            }
+
+            lock =
+                coll.findOneAndUpdate(
+                    session,
                     and(
-                        eq("_id", this.getKey()),
-                        eq("m", WRITE_MODE),
-                        type("o", BsonType.ARRAY),
-                        size("o", 1),
-                        elemMatch("o", mappedHolder2AndFilter(holder))));
-
-            System.err.println(
-                and(
-                        eq("_id", this.getKey()),
-                        eq("m", WRITE_MODE),
-                        type("o", BsonType.ARRAY),
-                        size("o", 1),
-                        elemMatch("o", mappedHolder2AndFilter(holder)))
-                    .toBsonDocument()
-                    .toJson());
-
-            return deleteResult.getDeletedCount() == 1
-                ? ok()
-                : thrownAnError("The current instance does not hold a write lock.");
+                        eq("_id", key),
+                        eq("version", version),
+                        eq("owners.hostname", thisOwner.hostname()),
+                        eq("owners.lease", thisOwner.lease()),
+                        eq("owners.thread", thisOwner.thread())),
+                    combine(inc("version", 1L), inc("owners.$.enter_count", -1)),
+                    UPDATE_OPTIONS);
+            boolean success = lock != null && lock.version() == newVersion;
+            return new UnlockTxnResponse(
+                success,
+                !success,
+                null,
+                success,
+                state,
+                lock == null
+                    ? null
+                    : new LockOwnerObject(
+                        lock.mode(),
+                        lock.owners().stream()
+                            .map(RWLockOwnerDocument::hashCode)
+                            .collect(toUnmodifiableSet())));
           };
-      CommonTxnResponse txnResponse =
-          commandExecutor.loopExecute(
-              command,
-              commandExecutor.defaultDBErrorHandlePolicy(
-                      NO_SUCH_TRANSACTION, WRITE_CONFLICT, LOCK_FAILED),
-              null,
-              t -> false);
-      if (txnResponse.thrownError) throw new SignalException(txnResponse.message);
+
+      Next:
+      for (; ; ) {
+        checkState();
+        UnlockTxnResponse rsp =
+            commandExecutor.loopExecute(
+                command,
+                commandExecutor.defaultDBErrorHandlePolicy(
+                    NO_SUCH_TRANSACTION, WRITE_CONFLICT, DUPLICATE_KEY),
+                null,
+                t ->
+                    !t.unlockSuccess
+                        && t.retryable
+                        && (t.exceptionMessage == null || t.exceptionMessage.isEmpty()));
+
+        if (rsp.casUpdateState) safeUpdateModeIgnoreFailure(rsp.captureState, rsp.newObj);
+
+        if (rsp.unlockSuccess) break Next;
+        if (rsp.exceptionMessage != null && !rsp.exceptionMessage.isEmpty())
+          throw new SignalException(rsp.exceptionMessage);
+        Thread.onSpinWait();
+      }
     }
 
     @Override
     public boolean isLocked() {
-      return super.doGetHolders() != null;
+      return false;
     }
 
     @Override
     public boolean isHeldByCurrentThread() {
-      return super.doIsHeldCurrentThread();
-    }
-
-    @Override
-    public Holder getHolder() {
-      return super.doGetFirstHolder();
+      return false;
     }
 
     @Override
@@ -384,133 +440,149 @@ public final class DistributeReadWriteLockImp extends DistributeMongoSignalBase<
     @CheckReturnValue
     @Override
     public boolean tryLock(Long waitTime, TimeUnit timeUnit) throws InterruptedException {
-      Document holder = currHolder();
-      BiFunction<ClientSession, MongoCollection<Document>, CommonTxnResponse> command =
+      RWLockOwnerDocument thisOwner = buildCurrentOwner(1);
+      BiFunction<ClientSession, MongoCollection<RWLockDocument>, TryLockTxnResponse> command =
           (session, coll) -> {
 
             // 执行之前先获取state revision的值，避免和wakeHead函数并发更新state的值冲突
-            StatefulVar<String> currState =
-                (StatefulVar<String>) varHandle.getAcquire(DistributeReadWriteLockImp.this);
+            @SuppressWarnings("unchecked")
+            StatefulVar<LockOwnerObject> state =
+                (StatefulVar<LockOwnerObject>)
+                    modeVarHandle.getAcquire(DistributeReadWriteLockImp.this);
 
-            Document readLock = coll.find(session, eq("_id", this.getKey())).first();
-            if (readLock == null) {
-              InsertOneResult insertOneResult =
-                  coll.insertOne(
-                      session,
-                      new Document("_id", this.getKey())
-                          .append("v", 1L)
-                          .append("m", READ_MODE)
-                          .append("o", ImmutableList.of(holder)));
-              return insertOneResult.getInsertedId() != null ? ok() : retryableError();
+            RWLockDocument lock = coll.find(session, eq("_id", this.getKey())).first();
+            if (lock == null) {
+              lock = new RWLockDocument(key, READ, List.of(thisOwner), 1L);
+              InsertOneResult insertOneResult = coll.insertOne(session, lock);
+              boolean success =
+                  insertOneResult.getInsertedId() != null && insertOneResult.wasAcknowledged();
+              return new TryLockTxnResponse(
+                  success, false, state, new LockOwnerObject(READ, Set.of(thisOwner.hashCode())));
             }
 
-            List<Document> holders = readLock.getList("o", Document.class);
-            boolean holdersEmpty = (holders == null || holders.isEmpty());
-            boolean inWriteMode = WRITE_MODE.equals(readLock.getString("m"));
-
-            // 当前有写锁占用资源，外部需要挂起线程
-            if (!holdersEmpty && inWriteMode) {
-              // 设置当前锁的状态处于w状态
-              if (identityHashCode(currState)
-                  == identityHashCode(
-                      varHandle.compareAndExchangeRelease(
-                          DistributeReadWriteLockImp.this, currState, new StatefulVar<>("w")))) {
-                return parkThread();
-              }
-              return retryableError();
+            // 如果当前锁的状态是写锁状态，并且有线程占用(包含当前线程占用写锁的情况，1个线程不允许同时获取读锁和写锁)，则需要挂起当前线程
+            if (!lock.owners().isEmpty() && lock.mode() == WRITE) {
+              return new TryLockTxnResponse(
+                  false,
+                  false,
+                  state,
+                  new LockOwnerObject(
+                      WRITE,
+                      lock.owners().stream()
+                          .map(RWLockOwnerDocument::hashCode)
+                          .collect(toUnmodifiableSet())));
             }
 
-            long revision = readLock.getLong("v");
-            long newRevision = revision + 1;
+            long version = lock.version(), newVersion = version + 1L;
 
-            var filter = and(eq("_id", this.getKey()), eq("v", revision));
-            // 没有任何线程占用锁，但是当前模式标记的是写锁模式
-            // 有线程占用锁，但是锁的模式是读锁模式
-            // 没有任何线程占用锁，但是当前模式标记的是写锁模式
-            // 有线程占用锁，但是锁的模式是读锁模式
-            var update =
-                inWriteMode
-                    ?
-                    // 没有任何线程占用锁，但是当前模式标记的是写锁模式
-                    combine(addToSet("o", holder), set("m", WRITE_MODE), inc("v", 1L))
-                    // 有线程占用锁，但是锁的模式是读锁模式
-                    : combine(addToSet("o", holder), inc("v", 1L));
-            readLock = coll.findOneAndUpdate(session, filter, update, UPDATE_OPTIONS);
-            return (readLock != null
-                    && newRevision == readLock.getLong("v")
-                    && extractHolder(readLock, holder).isPresent())
-                ? ok()
-                : retryableError();
+            List<Bson> condList = new ArrayList<>(8);
+            condList.add(eq("_id", key));
+            condList.add(eq("version", version));
+
+            List<Bson> updateList = new ArrayList<>(8);
+            updateList.add(inc("version", 1L));
+
+            if (lock.owners().isEmpty()) {
+              updateList.add(set("mode", READ));
+              updateList.add(addToSet("owners", thisOwner));
+            } else if (lock.mode() == READ && lock.owners().contains(thisOwner)) {
+              condList.add(eq("owners.hostname", thisOwner.hostname()));
+              condList.add(eq("owners.lease", thisOwner.lease()));
+              condList.add(eq("owners.thread", thisOwner.thread()));
+              updateList.add(inc("owners.$.enter_count", 1));
+            }
+            boolean success =
+                (lock =
+                            coll.findOneAndUpdate(
+                                session, and(condList), combine(updateList), UPDATE_OPTIONS))
+                        != null
+                    && lock.version() == newVersion
+                    && lock.owners().contains(thisOwner);
+            return new TryLockTxnResponse(
+                success,
+                !success,
+                state,
+                success
+                    ? new LockOwnerObject(
+                        lock.mode(),
+                        lock.owners().stream()
+                            .map(RWLockOwnerDocument::hashCode)
+                            .collect(toUnmodifiableSet()))
+                    : null);
           };
 
       long s = nanoTime(), waitTimeNanos = timeUnit.toNanos(waitTime);
       boolean timed = waitTime > 0;
 
       for (; ; ) {
-        // 尝试挂起线程
+        checkState();
+
         boolean elapsed =
             parkCurrentThreadUntil(
                 lock,
                 available,
                 () -> {
-                  @SuppressWarnings("UnnecessaryParentheses")
-                  StatefulVar<String> sv =
-                      ((StatefulVar<String>)
-                          (varHandle.getAcquire(DistributeReadWriteLockImp.this)));
-                  return sv == null || sv.value.isEmpty() || "r".equals(sv.value);
+                  @SuppressWarnings("unchecked")
+                  StatefulVar<LockOwnerObject> sv =
+                      ((StatefulVar<LockOwnerObject>)
+                          (modeVarHandle.getAcquire(DistributeReadWriteLockImp.this)));
+                  if (sv.value == null) return false;
+                  return (sv.value.mode == WRITE && !sv.value.ownerHashCodes.isEmpty());
                 },
                 timed,
                 s,
                 (waitTimeNanos - (nanoTime() - s)));
 
-        if (!elapsed) return false;
+        if (!elapsed) {
+          log.log(Level.INFO, "Timeout.");
+          return false;
+        }
 
-        // 循环检查状态
-        checkState();
-
-        CommonTxnResponse txnResponse =
+        TryLockTxnResponse rsp =
             commandExecutor.loopExecute(
                 command,
                 commandExecutor.defaultDBErrorHandlePolicy(
-                        NO_SUCH_TRANSACTION, WRITE_CONFLICT, LOCK_FAILED, DUPLICATE_KEY),
+                    NO_SUCH_TRANSACTION, WRITE_CONFLICT, DUPLICATE_KEY),
                 null,
-                t -> !t.txnOk && t.retryable && !t.thrownError && !t.parkThread,
+                t -> !t.tryLockSuccess && t.retryable,
                 timed,
                 timed ? (waitTimeNanos - (nanoTime() - s)) : -1L,
                 NANOSECONDS);
 
-        // 如果当前线程读锁获取成功，尝试着唤醒下一个等待的线程
-        if (txnResponse.txnOk) {
-          unparkSuccessor(false);
-          return true;
-        }
-
-        if (txnResponse.thrownError) {
-          // 如果当前加锁了可能是事务运行成功，但是提交失败
-          if (lock.isLocked() && lock.isHeldByCurrentThread()) lock.unlock();
-          throw new SignalException(txnResponse.message);
-        }
-
-        if (txnResponse.parkThread) {
-          Thread.onSpinWait();
-        }
+        safeUpdateModeIgnoreFailure(rsp.captureState, rsp.newObj);
+        if (rsp.tryLockSuccess) return true;
+        Thread.onSpinWait();
       }
     }
 
     @Override
     public void unlock() {
-      checkState();
-      Document holder = currHolder();
-
-      BiFunction<ClientSession, MongoCollection<Document>, CommonTxnResponse> command =
+      RWLockOwnerDocument thisOwner = buildCurrentOwner(1);
+      BiFunction<ClientSession, MongoCollection<RWLockDocument>, UnlockTxnResponse> command =
           (session, coll) -> {
-            Document readLock =
-                coll.find(session, and(eq("_id", this.getKey()), eq("m", READ_MODE))).first();
-            if (readLock == null || extractHolder(readLock, holder).isEmpty())
-              return thrownAnError("The current instance does not hold a read lock.");
+            @SuppressWarnings("unchecked")
+            StatefulVar<LockOwnerObject> state =
+                (StatefulVar<LockOwnerObject>)
+                    modeVarHandle.getAcquire(DistributeReadWriteLockImp.this);
 
-            Long revision = readLock.getLong("v");
-            List<Document> holders = readLock.getList("o", Document.class);
+              RWLockDocument lock = coll.find(session, eq("_id", key)).first();
+              if (lock == null || lock.mode() == READ || !lock.owners().contains(thisOwner)) {
+                  return new UnlockTxnResponse(
+                          false,
+                          false,
+                          "The current instance does not hold a read lock.",
+                          true,
+                          state,
+                          lock == null
+                                  ? null
+                                  : new LockOwnerObject(
+                                  lock.mode(),
+                                  lock.owners().stream()
+                                          .map(RWLockOwnerDocument::hashCode)
+                                          .collect(toUnmodifiableSet())));
+              }
+            Long revision = lock.getLong("v");
+            List<Document> holders = lock.getList("o", Document.class);
 
             // 达到删除的条件
             var filter = and(eq("_id", this.getKey()), eq("m", READ_MODE), eq("v", revision));
@@ -529,10 +601,10 @@ public final class DistributeReadWriteLockImp extends DistributeMongoSignalBase<
                             eq("host", holder.get("host")),
                             eq("thread", holder.get("thread")))),
                     inc("v", 1L));
-            readLock = coll.findOneAndUpdate(session, filter, update, UPDATE_OPTIONS);
-            return (readLock != null
-                    && readLock.getLong("v") == newRevision
-                    && extractHolder(readLock, holder).isEmpty())
+            lock = coll.findOneAndUpdate(session, filter, update, UPDATE_OPTIONS);
+            return (lock != null
+                    && lock.getLong("v") == newRevision
+                    && extractHolder(lock, holder).isEmpty())
                 ? ok()
                 : retryableError();
           };
@@ -541,7 +613,7 @@ public final class DistributeReadWriteLockImp extends DistributeMongoSignalBase<
           commandExecutor.loopExecute(
               command,
               commandExecutor.defaultDBErrorHandlePolicy(
-                      NO_SUCH_TRANSACTION, WRITE_CONFLICT, LOCK_FAILED),
+                  NO_SUCH_TRANSACTION, WRITE_CONFLICT, LOCK_FAILED),
               null,
               t -> false);
 
@@ -550,80 +622,66 @@ public final class DistributeReadWriteLockImp extends DistributeMongoSignalBase<
 
     @Override
     public boolean isLocked() {
-      return super.doGetHolders() != null;
+      return false;
     }
 
     @Override
     public boolean isHeldByCurrentThread() {
-      return super.doIsHeldCurrentThread();
-    }
-
-    @Override
-    public Collection<Holder> getHolders() {
-      return super.doGetHolders();
+      return false;
     }
 
     @Override
     protected void doClose() {}
-  }
 
-  /**
-   * 唤醒一个或者所有的等待线程
-   *
-   * @param all 是否唤醒所有的
-   */
-  private void unparkSuccessor(boolean all) {
-    lock.lock();
-    try {
-      if (all) available.signalAll();
-      else available.signal();
-    } finally {
-      lock.unlock();
+    @Override
+    public Collection<?> getParticipants() {
+      return null;
     }
   }
 
-  private void forceUnlock() {
-    BiFunction<ClientSession, MongoCollection<Document>, CommonTxnResponse> command =
-        (session, coll) -> {
-          Document lock = coll.find(session, eq("_id", this.getKey())).first();
-          if (lock == null) return ok();
-
-          List<Document> holders = lock.getList("o", Document.class);
-
-          // 达到删除条件
-          long revision = lock.getLong("v"), newRevision = revision + 1;
-          var filter = and(eq("_id", this.getKey()), eq("v", revision));
-          if (holders == null || holders.isEmpty()) {
-            DeleteResult deleteResult = coll.deleteOne(session, filter);
-            return deleteResult.getDeletedCount() == 1L ? ok() : retryableError();
-          }
-
-          // 将所有的Holder删除
-          var update = pull("o", new Document("lease", this.getLease().getLeaseID()));
-          return ((lock = coll.findOneAndUpdate(session, filter, update, UPDATE_OPTIONS)) != null
-                  && lock.getLong("v") == newRevision
-                  && ((holders = lock.getList("o", Document.class)) == null
-                      || holders.isEmpty()
-                      || holders.stream()
-                          .noneMatch(
-                              t -> t.getString("lease").equals(this.getLease().getLeaseID()))))
-              ? ok()
-              : retryableError();
-        };
-
-    CommonTxnResponse txnResponse =
-        commandExecutor.loopExecute(
-            command,
-            commandExecutor.defaultDBErrorHandlePolicy(
-                    NO_SUCH_TRANSACTION, WRITE_CONFLICT, LOCK_FAILED),
-            null,
-            t -> !t.txnOk && t.retryable);
-
-    if (!txnResponse.txnOk) throw new SignalException("Unknown Error.");
-  }
+  //  private void forceUnlock() {
+  //    BiFunction<ClientSession, MongoCollection<Document>, CommonTxnResponse> command =
+  //        (session, coll) -> {
+  //          Document lock = coll.find(session, eq("_id", this.getKey())).first();
+  //          if (lock == null) return ok();
+  //
+  //          List<Document> holders = lock.getList("o", Document.class);
+  //
+  //          // 达到删除条件
+  //          long revision = lock.getLong("v"), newRevision = revision + 1;
+  //          var filter = and(eq("_id", this.getKey()), eq("v", revision));
+  //          if (holders == null || holders.isEmpty()) {
+  //            DeleteResult deleteResult = coll.deleteOne(session, filter);
+  //            return deleteResult.getDeletedCount() == 1L ? ok() : retryableError();
+  //          }
+  //
+  //          // 将所有的Holder删除
+  //          var update = pull("o", new Document("lease", this.getLease().getLeaseID()));
+  //          return ((lock = coll.findOneAndUpdate(session, filter, update, UPDATE_OPTIONS)) !=
+  // null
+  //                  && lock.getLong("v") == newRevision
+  //                  && ((holders = lock.getList("o", Document.class)) == null
+  //                      || holders.isEmpty()
+  //                      || holders.stream()
+  //                          .noneMatch(
+  //                              t -> t.getString("lease").equals(this.getLease().getLeaseID()))))
+  //              ? ok()
+  //              : retryableError();
+  //        };
+  //
+  //    CommonTxnResponse txnResponse =
+  //        commandExecutor.loopExecute(
+  //            command,
+  //            commandExecutor.defaultDBErrorHandlePolicy(
+  //                NO_SUCH_TRANSACTION, WRITE_CONFLICT, LOCK_FAILED),
+  //            null,
+  //            t -> !t.txnOk && t.retryable);
+  //
+  //    if (!txnResponse.txnOk) throw new SignalException("Unknown Error.");
+  //  }
 
   /**
-   * 满足条件会唤醒头部线程 并且将{@link DistributeWriteLockImp#stateVars} 设置为空或者"r"
+   * 满足条件会唤醒头部线程 并且将{@link DistributeWriteLockImp#mode} 设置为空或者"r"
    *
    * @param event 删除事件或者锁的修改事件
    */
@@ -639,14 +697,14 @@ public final class DistributeReadWriteLockImp extends DistributeMongoSignalBase<
     for (; ; ) {
       // 执行之前先获取state的值，避免和lock函数并发更新state的值冲突
       StatefulVar<String> currState =
-          (StatefulVar<String>) varHandle.getAcquire(DistributeReadWriteLockImp.this);
+          (StatefulVar<String>) modeVarHandle.getAcquire(DistributeReadWriteLockImp.this);
 
       // 当fullDocument为空时，对应的锁数据被删除的操作
       if (fullDocument == null || holders == null || holders.isEmpty()) {
 
         if (identityHashCode(currState)
             == identityHashCode(
-                varHandle.compareAndExchangeRelease(
+                modeVarHandle.compareAndExchangeRelease(
                     DistributeReadWriteLockImp.this, currState, new StatefulVar<>("")))) {
           // 将锁的可用状态置空 代表可以执行读锁尝试 也可以执行写锁尝试
           unparkSuccessor(false);
@@ -661,7 +719,7 @@ public final class DistributeReadWriteLockImp extends DistributeMongoSignalBase<
       if (READ_MODE.equals(mode) && !holders.isEmpty()) {
         if (identityHashCode(currState)
             == identityHashCode(
-                varHandle.compareAndExchangeRelease(
+                modeVarHandle.compareAndExchangeRelease(
                     DistributeReadWriteLockImp.this, currState, new StatefulVar<>("r")))) {
           // 在写锁模式下，将锁的可用状态设置为r，代表读锁线程可以尝试着获取锁资源
           unparkSuccessor(false);
